// Copyright (c) 2024 Timo Savola. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package gate.server.model;

import "gate/pb/server/api.proto";
import "gate/pb/snapshot/buffers.proto";
import "google/protobuf/duration.proto";

option go_package = "gate.computer/gate/pb/server/model";

message Module {
  repeated string tags = 1;
}

message Instance {
  bool exists = 1;
  bool transient = 2;
  Status status = 3;
  snapshot.Buffers buffers = 4;
  google.protobuf.Duration time_resolution = 5;
  repeated string tags = 6;
}
